Corrección de error de imagenes
Se actualizó el enlace de las imagenes

--- a/KatasJonathan/Kata2.ipynb
+++ b/KatasJonathan/Kata2.ipynb
@@ -15,13 +15,13 @@
     "\n",
     "Procedimiento para la creación de un entorno virtual\n",
     "\n",
-    "![Comandos terminal 1](launchx\\KatasJonathan\\img\\terminal1.jpg)\n",
+    "![Comandos terminal 1](https://github.com/jona866/LaunchX-KatasJonathan/blob/main/KatasJonathan/img/terminal1.jpg)\n",
     "\n",
-    "![Comandos terminal 2](launchx\\KatasJonathan\\img\\terminal2.jpg)\n",
+    "![Comandos terminal 2](https://github.com/jona866/LaunchX-KatasJonathan/blob/main/KatasJonathan/img/terminal2.jpg)\n",
     "\n",
     "Una vez desactivado el entorno virtual, este es el resultado de lo que se creo dentro de la carpeta.\n",
     "\n",
-    "![Comandos terminal](launchx\\KatasJonathan\\img\\carpeta-env.jpg)"
+    "![Comandos terminal](https://github.com/jona866/LaunchX-KatasJonathan/blob/main/KatasJonathan/img/carpeta-env.jpg)"
    ]
   }
  ],
