--- a/KatasJonathan/Kata2.ipynb
+++ b/KatasJonathan/Kata2.ipynb
@@ -21,15 +21,54 @@
     "\n",
     "Una vez desactivado el entorno virtual, este es el resultado de lo que se creo dentro de la carpeta.\n",
     "\n",
-    "![Comandos terminal](https://github.com/jona866/LaunchX-KatasJonathan/blob/main/KatasJonathan/img/carpeta-env.jpg)"
+    "![Carpeta del entorno](https://github.com/jona866/LaunchX-KatasJonathan/blob/main/KatasJonathan/img/carpeta-env.jpg)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Si no se pueden ver ls imagenes, dejo los hipervínculos:\n",
+    "- [Comandos terminal 1](https://github.com/jona866/LaunchX-KatasJonathan/blob/main/KatasJonathan/img/terminal1.jpg)\n",
+    "\n",
+    "- [Comandos terminal 2](https://github.com/jona866/LaunchX-KatasJonathan/blob/main/KatasJonathan/img/terminal2.jpg)\n",
+    "\n",
+    "- [Carperta del entorno](https://github.com/jona866/LaunchX-KatasJonathan/blob/main/KatasJonathan/img/carpeta-env.jpg)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
-  "language_info": {
-   "name": "python"
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
   },
-  "orig_nbformat": 4
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.2"
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
